# Navegacion-Deteccion-Senales

./: .gitignore  README.md
docker/: Dockerfile  README.md  base.Dockerfile  build.sh  extended.Dockerfile
src/navegacion_deteccion_senales/: CMakeLists.txt  package.xml
src/navegacion_deteccion_senales/config/: lane_follower.yaml  params.yaml
src/navegacion_deteccion_senales/launch/: lane_dataset.launch.py  run.launch.py  sign_dataset.launch.py
src/navegacion_deteccion_senales/scripts/: annotation_generator_node.py  lane_dataset_node.py  lane_detection.py  lane_detection_node.py  lane_follower.py  sign_classification.py  sign_dataset_node.py  sign_detection.py  sign_detection_node.py  vehicle_control_node.py
tools/: AWSIM-config.json  annotate_signs_dataset.py  convert_to_onnx.py  docker-compose-carla.yaml  docker-compose-lane-dataset.yaml  docker-compose-record.yaml  docker-compose-sign-dataset.yaml  docker-compose-test.yaml  docker-compose.yaml  fastdds_profile.xml  foxglove.json  label_signs_dataset.py  make_lane_video.py  make_sign_video.py  run_docker.sh  visualize_lanes_dataset.py  visualize_signs_dataset.py
train/sign_classification/: CNN.py  CNN_validation.py
