<?xml version="1.0"?>
<package format="3">
  <name>navegacion_deteccion_senales</name>
  <version>0.1.0</version>
  <description>Paquete de percepción y control para navegación autónoma y detección de señales con ROS2 Jazzy y AWSIM.</description>
  <maintainer email="josloprui6@alum.us.es">Samuel Boleslaw Locoche, Victor Javier Granero Gil, José Francisco López Ruiz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>autoware_control_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>