<?xml version="1.0"?>
<package format="3">
  <name>navegacion_deteccion_senales</name>
  <version>0.1.0</version>
  <description>Paquete de percepción y control para navegación autónoma y detección de señales con ROS2 Humble y CARLA Simulator.</description>
  <maintainer email="josloprui6@alum.us.es">Samuel Boleslaw Locoche, Victor Javier Granero Gil, José Francisco López Ruiz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>carla_msgs</depend>
  <depend>foxglove_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>